Fix modal open shifting of navbar

--- a/client/src/style/style.less
+++ b/client/src/style/style.less
@@ -76,18 +76,10 @@ body {
   overflow-y: scroll;
 }
 
-body.modal-open nav.navbar-fixed-top {
-  margin-left: -15px;
-}
-
 // Overrides bootstrap modal shifting containers
 body.modal-open {
   overflow: scroll !important;
   padding-right: 0 !important;
-}
-
-body.modal-open .navbar-fixed-top > .container {
-  margin-right: -15px;
 }
 
 td.sequence-cell {
